--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,16 @@
   year={2002},
 }
 
+@article{Matas2004Robust,
+  title={Robust wide-baseline stereo from maximally stable extremal regions},
+  author={Matas, J. and Chum, O. and Urban, M. and Pajdla, T.},
+  journal={Image and Vision Computing},
+  volume={22},
+  number={10},
+  pages={761-767},
+  year={2004},
+}
+
 @article{Wolf2006Object,
   title={Object count/area graphs for the evaluation of object detection and segmentation algorithms},
   author={Wolf, Christian and Jolion, Jean Michel},
@@ -53,6 +63,14 @@
   number={5},
   pages={970-83},
   year={2013},
+}
+
+@inproceedings{Sung2015Scene,
+  title={Scene text detection with robust character candidate extraction method},
+  author={Sung, Myung Chul and Jun, Bongjin and Cho, Hojin and Kim, Daijin},
+  booktitle={International Conference on Document Analysis and Recognition},
+  pages={426-430},
+  year={2015},
 }
 
 @article{Dollar2015Fast,
