--- a/bibliography.bib
+++ b/bibliography.bib
@@ -55,6 +55,14 @@
   year={2012},
 }
 
+@inproceedings{Tu2012Detecting,
+  title={Detecting texts of arbitrary orientations in natural images},
+  author={Tu, Zhuowen and Ma, Yi and Liu, Wenyu and Bai, Xiang and Yao, Cong},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1083-1090},
+  year={2012},
+}
+
 @article{Yin2013Robust,
   title={Robust Text Detection in Natural Scene Images},
   author={Yin, Xu Cheng and Yin, Xuwang and Huang, Kaizhu and Hao, Hong Wei},
@@ -65,11 +73,29 @@
   year={2013},
 }
 
+@inproceedings{Kang2014Orientation,
+  title={Orientation Robust Text Line Detection in Natural Images},
+  author={Kang, Le and Li, Yi and Doermann, David},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={4034-4041},
+  year={2014},
+}
+
 @inproceedings{Sung2015Scene,
   title={Scene text detection with robust character candidate extraction method},
   author={Sung, Myung Chul and Jun, Bongjin and Cho, Hojin and Kim, Daijin},
   booktitle={International Conference on Document Analysis and Recognition},
   pages={426-430},
+  year={2015},
+}
+
+@article{Yin2015Multi,
+  title={Multi-Orientation Scene Text Detection with Adaptive Clustering.},
+  author={Yin, X. C. and Pei, W. Y. and Zhang, J. and Hao, H. W.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={37},
+  number={9},
+  pages={1930-1937},
   year={2015},
 }
 
