--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -265,7 +265,7 @@
 
         这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
 
-        而在测试阶段，首先用基于Skeleton-cut的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang 等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
+        而在测试阶段，首先用基于Skeleton-cut 的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang 等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
 
         最终，经过2层卷积和池化的响应输入到SVM 分类器，由此得到候选文字边缘骨架集合$P$ 中每个候选边缘骨架$p$ 的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$ 中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
 
@@ -296,7 +296,7 @@
 	\end{algorithmic}
     \end{algorithm}
 
-    其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$ 之间归一化的$L2$距离。而$f$ 是候选MSER 的特征，这些特征包含：$sw$ 是笔划宽度，$c$是HSV和灰度的颜色通道，$h,w$是候选MSER的高度和宽度；$yc$ 是候选MSER 在y 坐标轴上的中心坐标；另外函数$ol$用以计算2 个候选MSER 的包围框之间的重叠率；而$T$ 是经过实验计算得出的经验阈值。
+    其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$ 之间归一化的$L2$距离。而$f$ 是候选MSER 的特征，这些特征包含：$sw$ 是笔划宽度，$c$ 是HSV和灰度的颜色通道，$h,w$是候选MSER的高度和宽度；$yc$ 是候选MSER 在y 坐标轴上的中心坐标；另外函数$ol$用以计算2 个候选MSER 的包围框之间的重叠率；而$T$ 是经过实验计算得出的经验阈值。
 
     \begin{figure}[!h]
     \centering
@@ -321,7 +321,7 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时我们提出了2阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
+        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时我们提出了2 阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
 
         \begin{table}[!h]
         \centering
@@ -343,8 +343,8 @@
         \label{tab.c3_icdar13}
         \end{table}
 
-        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\%减低到53\%，因此牺牲的是文字检测的查全效果。
-        
+        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\%减低到53\%，因此牺牲的是文字检测的查全效果。
+
         在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\%而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
 
         \begin{table}[htbp]
@@ -369,6 +369,23 @@
         \hline
         \end{tabular}
         \label{tab.c3_icdar11}
+        \end{table}
+
+        \begin{table}[!h]
+        \centering
+        \caption{ 本方法与其它文字检测方法在MSRA-TD500 测试数据集上的检测成绩对比}
+        \begin{tabular}{p{0.25\textwidth}|p{0.25\textwidth} p{0.25\textwidth} p{0.13\textwidth}}
+        \hline
+        方法 & 查全R & 查准P & F值 \\
+        \hline
+        \textbf{Proposed} & 0.64 & 0.82 & 0.72 \\
+        Yin\cite{Yin2015Multi} & 0.63 & 0.81 & 0.71 \\
+        Kang\cite{Kang2014Orientation} & 0.62 & 0.71 & 0.66 \\
+        Yin\cite{Yin2013Robust} & 0.61 & 0.71 & 0.65 \\
+        Tu\cite{Tu2012Detecting} & 0.63 & 0.63 & 0.60\\
+        \hline
+        \end{tabular}
+        \label{tab.c3_msra}
         \end{table}
 
         \begin{figure}[!h]
