--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -345,8 +345,6 @@
 
         表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\%减低到53\%，因此牺牲的是文字检测的查全效果。
 
-        在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\%而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
-
         \begin{table}[htbp]
         \centering
         \caption{在ICDAR 2011测试集上对于字符提取数目和检出率的测评}
@@ -371,6 +369,8 @@
         \label{tab.c3_icdar11}
         \end{table}
 
+        在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\%而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
+
         \begin{table}[!h]
         \centering
         \caption{ 本方法与其它文字检测方法在MSRA-TD500 测试数据集上的检测成绩对比}
@@ -387,6 +387,8 @@
         \end{tabular}
         \label{tab.c3_msra}
         \end{table}
+
+        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82以及F值0.72的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。      
 
         \begin{figure}[!h]
         \centering
