--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -131,7 +131,7 @@
     \label{fig.c4_binary_tree_construction}
     \end{figure}
 
-    假设红色分割线$l_i$有2个属性：距离$ld_i$和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
+    假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
     然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
@@ -207,7 +207,7 @@
     	  \end{algorithmic}
         \end{algorithm}
 
-        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$的值改为-1。
+        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$的值改为-1。
 
         以上过程是算法\ref{alg:c4_binary_tree_search}的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$个三元组$p$的路径集合$P$就被构建了出来。
 
@@ -232,15 +232,15 @@
         \subsection{搜索策略}
         \esubsection{Searching strategies}
 
-        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3项策略中选出并仅选出1种：
+        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3项策略中选出并仅选出1种：
 
-        （1）保留父亲结点$n_5$所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$各自所代表的分离的文本行区域；
+        （1）保留父亲结点$n_5$所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域；
 
-        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$所代表的融合的文本行区域以及子结点$n_6$所代表的单独的文本行区域；
+        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$所代表的单独的文本行区域；
 
-        （2）仅保留子结点$n_6$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$所代表的融合的文本行区域以及子结点$n_7$所代表的单独的文本行区域；
+        （2）仅保留子结点$n_6$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$所代表的单独的文本行区域；
 
-        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure}[!h]
         \centering
@@ -252,7 +252,7 @@
         \label{fig.c4_search_strategy}
         \end{figure}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1阶段的判断过程中，结点$n_i$所代表的文字行区域要根据该结点的识别成绩值$nv$来进行而分类：如果$nv_i>0$，那么结点$n_i$所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$所代表的区域被判定为非文本区域，并用错号标记。通过上述对3个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b)举例来说：假如$n_7$和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$来进行而分类：如果$nv_i>0$，那么结点$n_i$所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$所代表的区域被判定为非文本区域，并用错号标记。通过上述对3个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b)举例来说：假如$n_7$和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -261,6 +261,16 @@
 
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
+
+        为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13)测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
+
+        此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
+        
+        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs方法。其中对文字检测查全和查准率的计算公式如下所示：
+        
+        $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
+        
+        而文字检测的$f$值是查全recall和查准precision的均值。
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
