--- a/bibliography.bib
+++ b/bibliography.bib
@@ -141,3 +141,25 @@
   pages={2315-2324},
   year={2016},
 }
+
+@inproceedings{Cho2016Canny,
+  title={Canny Text Detector: Fast and Robust Scene Text Localization Algorithm},
+  author={Cho, Hojin and Sung, Myungchul and Jun, Bongjin},
+  booktitle={Computer Vision and Pattern Recognition},
+  pages={3566-3573},
+  year={2016},
+}
+
+@article{Pham2016Robust,
+  title={Robust Text Detection in Natural Scene Images},
+  author={Pham, Van Khien and Lee, Guee Sang},
+  year={2016},
+}
+
+@inproceedings{He2017scene,
+  title={SCENE TEXT DETECTION BASED ON SKELETON-CUT DETECTOR},
+  author={He, Xiang and Song, Yong-Hong and Zhang, Yuan-Lin},
+  booktitle={ IEEE International Conference on Image Processing},
+  pages={3375-3379},
+  year={2017}
+}
