--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -109,9 +109,9 @@
         \label{fig.c4_candidate_line_construction}
         \end{figure}
 
-        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$上这些对应的位置上不存在文字区域与背景区域间的边界。
+        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$ 上这些对应的位置上不存在文字区域与背景区域间的边界。
 
-        为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$条红色候选文本行分割线组成。
+        为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$ 由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$条红色候选文本行分割线组成。
 
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
@@ -131,9 +131,9 @@
     \label{fig.c4_binary_tree_construction}
     \end{figure}
 
-    假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
+    假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$ 是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
-    然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
+    然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
     在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$中各变量的含义后，由$L$构建$N$的过程如算法\ref{alg:c4_build_binary_tree} 所示：
 
@@ -207,7 +207,7 @@
     	  \end{algorithmic}
         \end{algorithm}
 
-        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$的值改为-1。
+        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
 
         以上过程是算法\ref{alg:c4_binary_tree_search}的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$个三元组$p$的路径集合$P$就被构建了出来。
 
@@ -232,15 +232,15 @@
         \subsection{搜索策略}
         \esubsection{Searching strategies}
 
-        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3项策略中选出并仅选出1种：
+        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3 项策略中选出并仅选出1种：
 
         （1）保留父亲结点$n_5$所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域；
 
-        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$所代表的单独的文本行区域；
+        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$ 所代表的单独的文本行区域；
 
-        （2）仅保留子结点$n_6$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$所代表的单独的文本行区域；
+        （2）仅保留子结点$n_6$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$ 所代表的单独的文本行区域；
 
-        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure}[!h]
         \centering
@@ -265,15 +265,35 @@
         为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13)测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
 
         此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
-        
+
         用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs方法。其中对文字检测查全和查准率的计算公式如下所示：
-        
+
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
-        
+
         而文字检测的$f$值是查全recall和查准precision的均值。
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
+
+        \begin{table}[!h]
+        \centering
+        \caption{在ICDAR 2013上的文字检测效果(\%)}
+        \begin{tabular}{p{0.25\textwidth}|p{0.25\textwidth} p{0.25\textwidth} p{0.13\textwidth}}
+        \hline
+        方法 & 查全R & 查准P & F值 \\
+        \hline
+        \textbf{Proposed} & \textbf{89.2} & \textbf{75.5} & \textbf{82.3}\\
+        He\cite{He2017scene} & 76.2 & 86.7 & 81.1 \\
+        Cho\cite{Cho2016Canny} & 78.4 & 86.2 & 82.1 \\
+        Tian\cite{Tian2016Text} & 75.8 & 85.1 & 80.2 \\
+        Zhu\cite{Zhu2016Text} & 75 & 85 & 79 \\
+        Gupta\cite{Gupta2016Synthetic} & 66.30 & 94.80 & 78.00 \\
+        Pham\cite{Pham2016Robust} & 65.11 & 83.98 & 75.89 \\
+        Neumann\cite{Neumann2012Real} & 64.84 & 87.51 & 74.49 \\
+        \hline
+        \end{tabular}
+        \label{tab.c4_icdar13}
+        \end{table}
 
     \section{本章小结}
     \esection{Brief Summary}
