--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -264,7 +264,7 @@
 
         为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13)测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
 
-        此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
+        最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
         用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs方法。其中对文字检测查全和查准率的计算公式如下所示：
 
@@ -274,6 +274,10 @@
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
+
+        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny}的方法取得了81.1\%的检测F值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
+
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text}的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。
 
         \begin{table}[!h]
         \centering
@@ -294,6 +298,10 @@
         \end{tabular}
         \label{tab.c4_icdar13}
         \end{table}
+
+        此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+
+    
 
     \section{本章小结}
     \esection{Brief Summary}
