--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -263,7 +263,7 @@
         \caption{单尺度卷积神经网络分类器的架构} \label{fig.c3_cnn}
         \end{figure}
 
-        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
+        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN 网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
 
         而在测试阶段，首先用基于Skeleton-cut 的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang 等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
 
@@ -312,7 +312,7 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$到$3888 \times 2592$)的问题，而且文字也存在不同字体和颜色的问题。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f值，如下列公式所示：
+        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$到$3888 \times 2592$)的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f值，如下列公式所示：
 
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
@@ -343,7 +343,7 @@
         \label{tab.c3_icdar13}
         \end{table}
 
-        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\%减低到53\%，因此牺牲的是文字检测的查全效果。
+        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255 张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas 等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\%减低到53\%，因此牺牲的是文字检测的查全效果。
 
         \begin{table}[htbp]
         \centering
@@ -369,7 +369,7 @@
         \label{tab.c3_icdar11}
         \end{table}
 
-        在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\%而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
+        在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
 
         \begin{table}[!h]
         \centering
@@ -388,7 +388,7 @@
         \label{tab.c3_msra}
         \end{table}
 
-        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82以及F值0.72的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。      
+        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82以及F值0.72的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
 
         \begin{figure}[!h]
         \centering
