--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -277,8 +277,6 @@
 
         如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny}的方法取得了81.1\%的检测F值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text}的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。
-
         \begin{table}[!h]
         \centering
         \caption{在ICDAR 2013上的文字检测效果(\%)}
@@ -299,9 +297,14 @@
         \label{tab.c4_icdar13}
         \end{table}
 
-        此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text}的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
-    
+        \begin{figure}[!h]
+        \centering
+        \includegraphics[width=\textwidth]{./figures/c4_recall_proposals.jpg}
+        \caption{在ICDAR 2011 数据集上，本方法在各阶段中的文字检测查全与候选字符提取数目间的关系折线图: (a)候选文字边缘骨架提取， (b)文字边缘骨架切割， (c)文字边缘骨架过滤， (d)候选文本行定位， (e)非极大值抑制， (f)基于二叉树搜索的文本行优化。}
+        \label{fig.c4_recall_proposals}
+        \end{figure}   
 
     \section{本章小结}
     \esection{Brief Summary}
