--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,11 +39,27 @@
   year={2006},
 }
 
+@inproceedings{Neumann2010A,
+  title={A Method for Text Localization and Recognition in Real-World Images},
+  author={Neumann, Lukas and Matas, Jiri},
+  booktitle={Computer Vision - ACCV 2010 -  Asian Conference on Computer Vision, Queenstown, New Zealand, November 8-12, 2010, Revised Selected Papers},
+  pages={770-783},
+  year={2010},
+}
+
 @inproceedings{Wang2012End,
   title={End-to-end text recognition with convolutional neural networks},
   author={Wang, Tao and Wu, D. J and Coates, A and Ng, A. Y},
   booktitle={International Conference on Pattern Recognition},
   pages={3304-3308},
+  year={2012},
+}
+
+@inproceedings{Wang2012End,
+  title={End-to-end scene text recognition},
+  author={Wang, Kai and Babenko, Boris and Belongie, Serge},
+  booktitle={IEEE International Conference on Computer Vision},
+  pages={1457-1464},
   year={2012},
 }
 
@@ -73,11 +89,44 @@
   year={2013},
 }
 
+@article{Alsharif2013End,
+  title={End-to-End Text Recognition with Hybrid HMM Maxout Models},
+  author={Alsharif, Ouais and Pineau, Joelle},
+  journal={Computer Science},
+  year={2013},
+}
+
+@inproceedings{Matas2014Scene,
+  title={Scene Text Localization and Recognition with Oriented Stroke Detection},
+  author={Matas, Jiri},
+  booktitle={IEEE International Conference on Computer Vision},
+  pages={97-104},
+  year={2014},
+}
+
 @inproceedings{Kang2014Orientation,
   title={Orientation Robust Text Line Detection in Natural Images},
   author={Kang, Le and Li, Yi and Doermann, David},
   booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
   pages={4034-4041},
+  year={2014},
+}
+
+@article{Jaderberg2014Reading,
+  title={Reading Text in the Wild with Convolutional Neural Networks},
+  author={Jaderberg, Max and Simonyan, Karen and Vedaldi, Andrea and Zisserman, Andrew},
+  journal={International Journal of Computer Vision},
+  volume={116},
+  number={1},
+  pages={1-20},
+  year={2014},
+}
+
+@inproceedings{Jaderberg2014Deep,
+  title={Deep Features for Text Spotting},
+  author={Jaderberg, Max and Vedaldi, Andrea and Zisserman, Andrew},
+  booktitle={European Conference on Computer Vision},
+  pages={512-528},
   year={2014},
 }
 
