--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -53,23 +53,23 @@
     	\end{algorithmic}
         \end{algorithm}
 
-        其中$rs$指代的是响应小块，它的底面积是1 个定位包围框$b$，而高是$b$对应的置信度分数$c$。将所有的这些响应小块$rs$堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
+        其中$rs$指代的是响应小块，它的底面积是1 个定位包围框$b$，而高是$b$ 对应的置信度分数$c$。将所有的这些响应小块$rs$ 堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
 
         \begin{figure}[!h]
         \begin{minipage}[t]{0.37\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_img.jpg}
-        \centerline{\small (a)粗略定位结果}
+        \centerline{\small (a) 粗略定位结果}
         \end{minipage}
         \begin{minipage}[t]{0.35\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_static_skeleton_response.jpg}
-        \centerline{\small (b)统计边缘响应}
+        \centerline{\small (b) 统计边缘响应}
         \end{minipage}
         \begin{minipage}[t]{0.25\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_horizontal_projection.jpg}
-        \centerline{\small (c)水平方向的映射}
+        \centerline{\small (c) 水平方向的映射}
         \end{minipage}
         \caption{在统计边缘响应中，文本区域与背景可以被区分开；而且通过后续的对统计边缘响应的水平映射操作，文本行也可以进一步区分开彼此}
         \label{fig.c4_static_skeleton_response}
@@ -93,17 +93,17 @@
         \begin{minipage}[t]{0.32\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_gradient.jpg}
-        \centerline{\small (a)在水平映射图上的梯度}
+        \centerline{\small (a) 在水平映射图上的梯度}
         \end{minipage}
         \begin{minipage}[t]{0.32\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_unified.jpg}
-        \centerline{\small (b)梯度的取正和统一坐标}
+        \centerline{\small (b) 梯度的取正和统一坐标}
         \end{minipage}
         \begin{minipage}[t]{0.32\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_nms.jpg}
-        \centerline{\small (c)梯度的非极大值抑制}
+        \centerline{\small (c) 梯度的非极大值抑制}
         \end{minipage}
         \caption{通过梯度计算和非极大值抑制操作来粗略定位文本行}
         \label{fig.c4_candidate_line_construction}
@@ -135,7 +135,7 @@
 
     然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
-    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$中各变量的含义后，由$L$构建$N$的过程如算法\ref{alg:c4_build_binary_tree} 所示：
+    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$中各变量的含义后，由$L$构建$N$ 的过程如算法\ref{alg:c4_build_binary_tree} 所示：
 
     \begin{algorithm}[!h]
 	\renewcommand{\algorithmicrequire}{\textbf{输入:}}
@@ -172,7 +172,7 @@
         \subsection{搜索路径}
         \esubsection{Searching the paths}
 
-        给定二叉树型搜索空间$N$,假设$N$是由$m$ 个结点$n$ 构成，那么通过算法\ref{alg:c4_binary_tree_search}，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$和右子结点$nr_i$。
+        给定二叉树型搜索空间$N$,假设$N$是由$m$ 个结点$n$ 构成，那么通过算法\ref{alg:c4_binary_tree_search}，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$ 都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$和右子结点$nr_i$。
 
         \begin{algorithm}[!h]
     	\renewcommand{\algorithmicrequire}{\textbf{输入:}}	
@@ -207,15 +207,15 @@
     	  \end{algorithmic}
         \end{algorithm}
 
-        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
+        算法\ref{alg:c4_binary_tree_search} 的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search} 就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
 
-        以上过程是算法\ref{alg:c4_binary_tree_search}的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$个三元组$p$的路径集合$P$就被构建了出来。
+        以上过程是算法\ref{alg:c4_binary_tree_search} 的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$个三元组$p$的路径集合$P$就被构建了出来。
 
         \begin{figure}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_bianry_tree_search.jpg}
         \begin{minipage}[t]{0.33\linewidth}
-        \centerline{\small (a)存储二叉树型搜索空间的表格}
+        \centerline{\small (a) 存储二叉树型搜索空间的表格}
         \end{minipage}
         \begin{minipage}[t]{0.33\linewidth}
         \centerline{\small(b)二叉树搜索算法的迭代过程}
@@ -227,20 +227,20 @@
         \label{fig.c4_bianry_tree_search}
         \end{figure}
 
-        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search}所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a)中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree}在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b)所示；最后，算法的每次迭代，都会生成1个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c)所示的路径集合，即为算法\ref{alg:c4_binary_tree_search}的搜索结果。
+        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
 
         得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3 项策略中选出并仅选出1种：
 
-        （1）保留父亲结点$n_5$所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域；
+        （1）保留父亲结点$n_5$ 所代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域；
 
-        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$ 所代表的单独的文本行区域；
+        （2）仅保留子结点$n_7$ 所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_6$ 所代表的单独的文本行区域；
 
-        （2）仅保留子结点$n_6$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$ 所代表的单独的文本行区域；
+        （2）仅保留子结点$n_6$ 所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$ 所代表的单独的文本行区域；
 
-        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure}[!h]
         \centering
@@ -252,7 +252,7 @@
         \label{fig.c4_search_strategy}
         \end{figure}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$来进行而分类：如果$nv_i>0$，那么结点$n_i$所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$所代表的区域被判定为非文本区域，并用错号标记。通过上述对3个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b)举例来说：假如$n_7$和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -266,7 +266,7 @@
 
         最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
-        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs方法。其中对文字检测查全和查准率的计算公式如下所示：
+        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式如下所示：
 
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
@@ -275,7 +275,7 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny}的方法取得了81.1\%的检测F值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
+        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
         \begin{table}[!h]
         \centering
@@ -297,14 +297,59 @@
         \label{tab.c4_icdar13}
         \end{table}
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text}的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+
+        \begin{table}[!h]
+        \centering
+        \caption{在ICDAR 2011测试集上对于字符提取数目和检出率的测评}
+        \begin{tabular}{p{0.33\textwidth}|p{0.33\textwidth} p{0.25\textwidth}}
+        \hline
+        方法 & 候选字符数目 & 检出率 \\
+        \hline
+        All ERs & 6,051,331 & 0.966 \\
+        Matas\cite{Matas2004Robust} & 39,762 & 0.539 \\
+        Sung\cite{Sung2015Scene} & 93,357 & 0.877  \\
+        Cho\cite{Cho2016Canny} & 8,121 & 0.874 \\
+        He\cite{He2017scene} & 8,231 & 0.879 \\
+        \hline
+        \textbf{Proposed} & \textbf{7,137} & \textbf{0.892} \\
+        \hline
+        \end{tabular}
+        \label{tab.c4_icdar11}
+        \end{table}
+
+        如表\ref{tab.c4_icdar11}所示，在ICDAR 2011 文字测试数据集上，本章提出的基于二叉树搜索的文字检测方法与上一章提出的He\cite{He2017scene}的方法，以及其它最先进的的文字检测方法如Cho\cite{Cho2016Canny}、Sung\cite{Sung2015Scene} 等的方法都进行了字符提取数目和检出率的量化对比。从实验结果上来看，本章提出的方法可以在获得最高文字检出率的同时，保证提取的字符数目最少。该实验说明表明，相对于其它先进文字检测方法而言，本章方法都达到更优的文字查全和查准效果的折衷。
 
         \begin{figure}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_recall_proposals.jpg}
-        \caption{在ICDAR 2011 数据集上，本方法在各阶段中的文字检测查全与候选字符提取数目间的关系折线图: (a)候选文字边缘骨架提取， (b)文字边缘骨架切割， (c)文字边缘骨架过滤， (d)候选文本行定位， (e)非极大值抑制， (f)基于二叉树搜索的文本行优化。}
+        \caption{在ICDAR 2011 数据集上，本方法在各阶段中的文字检测查全与候选字符提取数目间的关系折线图: (a)候选文字边缘骨架提取， (b)文字边缘骨架切割， (c)文字边缘骨架过滤， (d) 候选文本行定位， (e)非极大值抑制， (f)基于二叉树搜索的文本行优化。}
         \label{fig.c4_recall_proposals}
-        \end{figure}   
+        \end{figure}
+
+        图\ref{fig.c4_recall_proposals}展示的是在本章提出方法的各阶段中，字符检出率与候选字符提取数目的关系折线图。与上一章提出的He\cite{He2017scene} 的方法相比，本章的方法在基于边缘骨架切割的文字检测子的基础上，融入了基于二叉树型搜索空间搜索的文本行定位优化方法。其中，基于二叉树搜索的文本行矫正进一步减少了非文字候选字符的提取数目，同时却提升了候选字符的查全效果。因此本章方法相对上一章方法，字符检出率增高2\%，且提取的候选字符数目能降低10\%。
+        
+        \begin{table*}[!h]
+        \centering
+        \caption{本章提出方法与其它先进方法的端对端文字识别成绩}
+        \begin{tabular}{l|l l l l l l l}
+        \hline
+        方法 & IC03-50 & IC03-FULL & IC03 & SVT-50 & SVT & IC11 & IC13  \\
+        \hline
+        Neumann\cite{Neumann2010A} & -- & -- & 41 & -- & -- & -- & -- \\
+        Wang\cite{Wang2012End} & 68 & 51 & -- & 38 & -- & -- & -- \\
+        Wang\cite{Wang2012End} & 72 & 67 & -- & 46 & -- & -- & -- \\
+        Matas\cite{Matas2014Scene} & -- & -- & -- & -- & -- & -- & 45 \\
+        Alsharif\cite{Alsharif2013End} & 77 & 70 & 63 & 48 & -- & -- & -- \\
+        Jaderberg\cite{Jaderberg2014Deep} & 80 & 75 & -- & -- & 56 & -- & -- \\
+        Jaderberg\cite{Jaderberg2014Reading} & 90 & 86 & 78 & 76 & 53 & 76 & 76 \\
+        He\cite{He2017scene} & 91 & 85 & 78 & 77 & 53 & 75 & 77 \\
+        \textbf{Proposed} & 92 & 86 & 79 & 77 & 55 & 78 & 79 \\
+        \hline
+        \end{tabular}
+        \label{tab.recog}
+        \end{table*}
+        
 
     \section{本章小结}
     \esection{Brief Summary}
