--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -227,10 +227,11 @@
         \label{fig.c4_bianry_tree_search}
         \end{figure}
 
-        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
+        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
+        \label{sec.c4_searching strategies}
 
         得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1 个被搜索到的路径三元组$p_i$为例，$p_i=\left\{np_i,nl_i,nr_i\right\}=\left\{n_5,n_6,n_7\right\}$。 那么对$p_1$的决策将在下列的3 项策略中选出并仅选出1种：
 
@@ -240,7 +241,7 @@
 
         （2）仅保留子结点$n_6$ 所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$ 所代表的单独的文本行区域；
 
-        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$ 以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure}[!h]
         \centering
@@ -254,7 +255,7 @@
 
         具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$和$n_5$都被判定为文本，而$n_6$被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$和$n_7$ 各自所代表的分离的文本行区域。
 
-        同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
+        同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
     \section{实验和结果分析}
     \esection{Experimental Results}
@@ -271,6 +272,8 @@
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
         而文字检测的$f$值是查全recall和查准precision的均值。
+
+        此外本章提出的方法还与其它方法在各场景文字图片数据集上进行了识别成绩的对比实验。用以验证识别效果的评判标准来自Wang\cite{Wang2012End}的方法。识别结果包含所有的拉丁文字，但是忽略那些不足3个字符长度的单词。只有当检测到的1个候选文字的包围框与文字定位结果真值(ground truth)的重叠率(Interaction over Union，简称为IoU)超过50\% 时，该候选文字的识别成绩才被认为是有效的。
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
@@ -297,7 +300,7 @@
         \label{tab.c4_icdar13}
         \end{table}
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
         \begin{table}[!h]
         \centering
@@ -323,12 +326,12 @@
         \begin{figure}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_recall_proposals.jpg}
-        \caption{在ICDAR 2011 数据集上，本方法在各阶段中的文字检测查全与候选字符提取数目间的关系折线图: (a)候选文字边缘骨架提取， (b)文字边缘骨架切割， (c)文字边缘骨架过滤， (d) 候选文本行定位， (e)非极大值抑制， (f)基于二叉树搜索的文本行优化。}
+        \caption{在ICDAR 2011 数据集上，本方法在各阶段中的文字检测查全与候选字符提取数目间的关系折线图: (a)候选文字边缘骨架提取， (b) 文字边缘骨架切割， (c)文字边缘骨架过滤， (d) 候选文本行定位， (e)非极大值抑制， (f) 基于二叉树搜索的文本行优化。}
         \label{fig.c4_recall_proposals}
         \end{figure}
 
         图\ref{fig.c4_recall_proposals}展示的是在本章提出方法的各阶段中，字符检出率与候选字符提取数目的关系折线图。与上一章提出的He\cite{He2017scene} 的方法相比，本章的方法在基于边缘骨架切割的文字检测子的基础上，融入了基于二叉树型搜索空间搜索的文本行定位优化方法。其中，基于二叉树搜索的文本行矫正进一步减少了非文字候选字符的提取数目，同时却提升了候选字符的查全效果。因此本章方法相对上一章方法，字符检出率增高2\%，且提取的候选字符数目能降低10\%。
-        
+
         \begin{table*}[!h]
         \centering
         \caption{本章提出方法与其它先进方法的端对端文字识别成绩}
@@ -347,9 +350,15 @@
         \textbf{Proposed} & 92 & 86 & 79 & 77 & 55 & 78 & 79 \\
         \hline
         \end{tabular}
-        \label{tab.recog}
+        \label{tab.c4_recognition}
         \end{table*}
+
+        在第\ref{sec.c4_searching strategies}节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
         
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。
+
+
+
 
     \section{本章小结}
     \esection{Brief Summary}
