--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -345,7 +345,7 @@
         Matas\cite{Matas2014Scene} & -- & -- & -- & -- & -- & -- & 45 \\
         Alsharif\cite{Alsharif2013End} & 77 & 70 & 63 & 48 & -- & -- & -- \\
         Jaderberg\cite{Jaderberg2014Deep} & 80 & 75 & -- & -- & 56 & -- & -- \\
-        Jaderberg\cite{Jaderberg2014Reading} & 90 & 86 & 78 & 76 & 53 & 76 & 76 \\
+        Jaderberg\cite{Jaderberg2016Reading} & 90 & 86 & 78 & 76 & 53 & 76 & 76 \\
         He\cite{He2017scene} & 91 & 85 & 78 & 77 & 53 & 75 & 77 \\
         \textbf{Proposed} & 92 & 86 & 79 & 77 & 55 & 78 & 79 \\
         \hline
@@ -354,8 +354,8 @@
         \end{table*}
 
         在第\ref{sec.c4_searching strategies}节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
-        
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。
+
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading}提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
 
 
